--- a/spotify-clone/src/css/CircleButton.css
+++ b/spotify-clone/src/css/CircleButton.css
@@ -1,9 +1,17 @@
 .CircleButton {
-  width: 3em;
-  height: 3em;
+  /* setting size and circle shape */
+  width: 3rem;
+  height: 3rem;
   padding: 0;
+  border-radius: 100%;
+  border: 0;
+  /* centering the img */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .CircleButtonImg {
-  width: 100%;
+  max-width: 70%;
+  border-radius: 100%;
 }
