edit Header element

--- a/spotify-clone/src/css/Header.css
+++ b/spotify-clone/src/css/Header.css
@@ -10,6 +10,10 @@ header > div {
   display: flex;
 }
 
+#center-header {
+  margin-left: 14rem;
+}
+
 #search-bar {
   display: flex;
   width: 29.625rem;
@@ -22,8 +26,6 @@ header > div {
   border-radius: 2rem;
 }
 
-
-
 .icon-container {
   display: flex;
   justify-content: center;
@@ -34,23 +36,62 @@ header > div {
 #search-icon {
   max-width: 2.1rem;
   position: absolute;
-  left: 1em;
+  left: .5em;
 }
 
-#search-song {
+#search-input {
   width: 29.625rem;
   padding: 0 4rem 0 3rem;
   background-color: #1f1f1f;
   border: none;
   border-radius: 2rem;
   transition: all .1s ease-in-out;
+  font-size: 1rem;
+  color:  white;
 }
 
-#search-song:focus {
+#search-input:focus {
   outline: 2px solid white;
 }
 
 #browse-icon {
+  /* positioning to center icon vertically while maintaining a small border */
   position: absolute;
   right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 50%;
+  /* border styling */
+  border-radius: 0 100% 100% 0;
+  border-left: 1px solid white;
+}
+
+#install-link {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+  color: white;
+  text-decoration: none;
+  transition: all .2s ease-in-out;
+}
+
+#install-link:hover {
+  opacity: .5;
+}
+
+#download-icon {
+  width: 15%;
+  margin-right: .25em;
+}
+
+#notifications-button {
+  opacity: .5;
+  transition: all .1s ease-in-out;
+}
+
+#notifications-button:hover {
+  opacity: 1
 }
