--- a/spotify-clone/src/components/CircleButton/CircleButton.css
+++ b/spotify-clone/src/components/CircleButton/CircleButton.css
@@ -1,4 +1,4 @@
-.CircleButton {
+.circle-button {
   /* setting size and circle shape */
   width: 3rem;
   height: 3rem;
@@ -11,7 +11,7 @@
   align-items: center;
 }
 
-.CircleButtonImg {
+.circle-button-img {
   max-width: 70%;
   border-radius: 100%;
 }
