--- a/spotify-clone/src/components/Footer/Footer.css
+++ b/spotify-clone/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 footer {
   background-color: Black;
-  height: 4.5rem;
+  height: 5rem;
   display: flex;
   justify-content: space-between;
   position: fixed;
@@ -78,9 +78,20 @@ footer {
   align-items: center;
 }
 
+#playback-bar {
+  width: 100%;
+  max-height: 100%;
+}
+
 #additional-controls {
   width: 30%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
+
+#volume-controls {
+  display: flex;
+  align-items: center;
+}
+
