--- a/spotify-clone/src/css/App.css
+++ b/spotify-clone/src/css/App.css
@@ -1,7 +1,8 @@
 /* container div to apply flex styling to elements */
 .container {
   height: 100vh;
-  padding: .5rem;
+  /* padding to account for fixed header and footer */
+  padding: 4rem .5rem 5.5rem .5rem;
   display: flex;
   flex-direction: column;
   background-color: black;
