--- a/spotify-clone/src/components/Header/Header.css
+++ b/spotify-clone/src/components/Header/Header.css
@@ -76,12 +76,13 @@ header > div {
   justify-content: center;
   align-items: center;
   color: white;
+  opacity: .6;
   text-decoration: none;
   transition: all .2s ease-in-out;
 }
 
 #install-link:hover {
-  opacity: .5;
+  opacity: 1;
 }
 
 #download-icon {
