--- a/spotify-clone/src/components/Resizable/leftPanel.css
+++ b/spotify-clone/src/components/Resizable/leftPanel.css
@@ -2,6 +2,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 
 #library-header {
@@ -50,4 +51,61 @@
 
 #filter-options {
   margin-top: .5rem;
+}
+
+#library-container {
+  height: 100%;
+  max-height: calc(100vh - (4rem + 5rem));
+  overflow-y: auto
+}
+
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #5A5A5A;
+  height: 10rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #898989;
+}
+
+
+#library-search {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#library-search-button {
+  width: 2rem;
+  height: 2rem;
+  opacity: .6;
+  transition: all .1s ease-out;
+}
+
+#library-search-button:hover {
+  background-color: #2a2a2a !important;
+  opacity: 1;
+}
+
+#recents {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  font-size: .875rem;
+  opacity: .6;
+  transition: all .1s ease-out;
+}
+
+#recents:hover {
+  opacity: 1;
+}
+
+#recents-icon {
+  width: 2rem;
+  height: 2rem;
 }
